--- a/src/templates/dialog/new-psychic-discipline.hbs
+++ b/src/templates/dialog/new-psychic-discipline.hbs
@@ -17,7 +17,7 @@
       <option value='electromagnetism'>{{localize 'anima.ui.psychic.psychicPowers.discipline.electromagnetism.title'}}</option>
       <option value='teleportation'>{{localize 'anima.ui.psychic.psychicPowers.discipline.teleportation.title'}}</option>
       <option value='light'>{{localize 'anima.ui.psychic.psychicPowers.discipline.light.title'}}</option>
-      <option value='hipersensibilidad'>{{localize 'anima.ui.psychic.psychicPowers.discipline.hipersensibilidad.title'}}</option>
+      <option value='hypersensitivity'>{{localize 'anima.ui.psychic.psychicPowers.discipline.hypersensitivity.title'}}</option>
     {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
     </div>
   </div>
