update-psychic-discipline-row

--- a/src/scss/actor/parts/psychic.scss
+++ b/src/scss/actor/parts/psychic.scss
@@ -53,6 +53,8 @@
       }
 
       .psychic-discipline-row {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
         margin-top: 0.75rem;
 
         .name .input-container {
