--- a/src/templates/actor/parts/psychic/parts/mental-patterns.hbs
+++ b/src/templates/actor/parts/psychic/parts/mental-patterns.hbs
@@ -9,34 +9,37 @@
   {{#> "systems/animabf/templates/common/ui/group-body.hbs"
     class="mental-patterns"
   }}
-    {{#each system.psychic.mentalPatterns as |pattern index|}}
-      <div data-item-id='{{pattern._id}}' class='mental-pattern-row'>
+    {{#each system.psychic.mentalPatterns as |mentalPattern|}}
+      <div data-item-id='{{mentalPattern._id}}' class='mental-pattern-row'>
         {{>
         "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
           class="name"
           title=(localize "anima.ui.psychic.mentalPattern.name.title")
-          hideTitle=(is "gt" index 0)
+          hideTitle=(is "gt" @index 0)
+          disabled=true
           inputType="text"
-          inputName=(concat "system.dynamic.mentalPatterns." pattern._id ".name")
-          inputValue=pattern.name
+          inputName=(concat "system.dynamic.mentalPatterns." mentalPattern._id ".name")
+          inputValue=(localize (concat 'anima.ui.psychic.psychicPowers.mentalPattern.' mentalPattern.name '.title'))
         }}
 
         {{>
         "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
           class="bonus"
           title=(localize "anima.ui.psychic.mentalPattern.bonus.title")
-          hideTitle=(is "gt" index 0)
-          inputName=(concat "system.dynamic.mentalPatterns." pattern._id ".system.bonus.value")
-          inputValue=pattern.system.bonus.value
+          hideTitle=(is "gt" @index 0)
+          inputType="text"
+          inputName=(concat "system.dynamic.mentalPatterns." mentalPattern._id ".system.bonus.value")
+          inputValue=mentalPattern.system.bonus.value
         }}
 
         {{>
         "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
           class="penalty"
           title=(localize "anima.ui.psychic.mentalPattern.penalty.title")
-          hideTitle=(is "gt" index 0)
-          inputName=(concat "system.dynamic.mentalPatterns." pattern._id ".system.penalty.value")
-          inputValue=pattern.system.penalty.value
+          hideTitle=(is "gt" @index 0)
+          inputType="text"
+          inputName=(concat "system.dynamic.mentalPatterns." mentalPattern._id ".system.penalty.value")
+          inputValue=mentalPattern.system.penalty.value
         }}
 
       </div>
