update-mentalPattern-english fix

--- a/src/templates/dialog/new-mental-pattern.hbs
+++ b/src/templates/dialog/new-mental-pattern.hbs
@@ -7,8 +7,8 @@
     }}
       <option value='introversion'>{{localize 'anima.ui.psychic.psychicPowers.mentalPattern.introversion.title'}}</option>
       <option value='extroversion'>{{localize 'anima.ui.psychic.psychicPowers.mentalPattern.extroversion.title'}}</option>
-      <option value='craziness'>{{localize 'anima.ui.psychic.psychicPowers.mentalPattern.craziness.title'}}</option>
-      <option value='psychopathy'>{{localize 'anima.ui.psychic.psychicPowers.mentalPattern.psychopathy.title'}}</option>
+      <option value='madness'>{{localize 'anima.ui.psychic.psychicPowers.mentalPattern.madness.title'}}</option>
+      <option value='psychopath'>{{localize 'anima.ui.psychic.psychicPowers.mentalPattern.psychopath.title'}}</option>
       <option value='compassion'>{{localize 'anima.ui.psychic.psychicPowers.mentalPattern.compassion.title'}}</option>
       <option value='cowardice'>{{localize 'anima.ui.psychic.psychicPowers.mentalPattern.cowardice.title'}}</option>
       <option value='courage'>{{localize 'anima.ui.psychic.psychicPowers.mentalPattern.courage.title'}}</option>
