--- a/src/scss/items/spell/spell.scss
+++ b/src/scss/items/spell/spell.scss
@@ -1,5 +1,123 @@
 @import '../../variable';
 
+@mixin spell {
+  width: calc(100% - 0.5rem);
+
+  border-radius: $border-radius;
+  box-shadow: $card-box-shadow;
+
+  .input {
+    height: 1.25rem;
+  }
+
+  .spell-header {
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+
+    width: 100%;
+
+    .first-row {
+      width: 100%;
+
+      .name .input-container {
+        width: 100%;
+      }
+    }
+
+    .second-row {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+
+      .level,
+      .via {
+        .input {
+          height: 1.5rem;
+        }
+      }
+
+      .via .input-container {
+        width: 8rem;
+      }
+    }
+  }
+
+  .base-grade {
+    margin-bottom: 0.5rem;
+
+    .grade-name {
+      align-self: flex-end;
+    }
+  }
+
+  .base-grade,
+  .arcane-grade,
+  .intermediate-grade,
+  .advanced-grade {
+    .grade-name {
+      min-width: 5rem;
+    }
+  }
+
+  .grade-row {
+    display: flex;
+    justify-content: start;
+
+    .int-required {
+      .input-container {
+        width: 3.5rem;
+      }
+    }
+
+    .grade-description {
+      width: 100%;
+
+      .input-container {
+        width: 100%;
+      }
+    }
+  }
+
+  .description {
+    display: flex;
+    justify-content: start;
+    padding-top: 0.5rem;
+
+    .label {
+      align-self: flex-start;
+      padding-right: 0.5rem;
+    }
+    .editor {
+      @include input;
+
+      font-weight: inherit;
+
+      height: 6rem;
+      width: 100%;
+
+      margin-top: 0;
+      border-radius: 0.5rem;
+    }
+  }
+
+  .spell-footer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+
+    .input {
+      height: 1.5rem;
+    }
+  }
+}
+
+.spell-svelte {
+  @include spell;
+}
+
 .base-item {
   display: flex;
 
@@ -13,120 +131,10 @@
   }
 
   .spell-item-dialog {
-    width: calc(100% - 0.5rem);
-
-    border-radius: $border-radius;
-    box-shadow: $card-box-shadow;
+    @include spell;
 
     margin-left: 0.5rem;
     margin-right: 0.5rem;
-
-    .input {
-      height: 1.25rem;
-    }
-
-    .spell-header {
-      padding-right: 0.5rem;
-      padding-left: 0.5rem;
-
-      width: 100%;
-
-      .first-row {
-        width: 100%;
-
-        .name .input-container {
-          width: 100%;
-        }
-      }
-
-      .second-row {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-
-        .level,
-        .via {
-          .input {
-            height: 1.5rem;
-          }
-        }
-
-        .via .input-container {
-          width: 8rem;
-        }
-      }
-    }
-
-    .base-grade {
-      margin-bottom: 0.5rem;
-
-      .grade-name {
-        align-self: flex-end;
-      }
-    }
-
-    .base-grade,
-    .arcane-grade,
-    .intermediate-grade,
-    .advanced-grade {
-      .grade-name {
-        min-width: 5rem;
-      }
-    }
-
-    .grade-row {
-      display: flex;
-      justify-content: start;
-
-      .int-required {
-        .input-container {
-          width: 3.5rem;
-        }
-      }
-
-      .description {
-        width: 100%;
-
-        .input-container {
-          width: 100%;
-        }
-      }
-    }
-
-    .description {
-      display: flex;
-      justify-content: start;
-      padding-top: 0.5rem;
-
-      .label {
-        align-self: flex-start;
-        padding-right: 0.5rem;
-      }
-      .editor {
-        @include input;
-
-        font-weight: inherit;
-
-        height: 6rem;
-        width: 100%;
-
-        margin-top: 0;
-        border-radius: 0.5rem;
-      }
-    }
-
-    .spell-footer {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-
-      padding-left: 0.5rem;
-      padding-right: 0.5rem;
-
-      .input {
-        height: 1.5rem;
-      }
-    }
   }
 
   .base-item-image {
