remove-domine technique active effects

--- a/src/templates/common/ui/group.hbs
+++ b/src/templates/common/ui/group.hbs
@@ -13,7 +13,7 @@
   {{/if}}
   {{#if this.hasEffects}}
     <a class="toggle-effects-button" data-effects-item-id='{{this.effectsItemId}}'>
-    <i class="fas {{#if this.effectsEnabled}}fa-times{{else}}fa-check{{/if}}" title="Activar efectos"></i>
+    <i class="fas {{#if this.effectsEnabled}}fa-times{{else}}fa-check{{/if}}" title="Activate effects"></i>
     </a>
   {{/if}}
 
