--- a/src/templates/actor/parts/effects/effects.hbs
+++ b/src/templates/actor/parts/effects/effects.hbs
@@ -1,3 +1,4 @@
 <div class='effects'>
   {{> "systems/animabf/templates/actor/parts/effects/parts/effects-list.hbs"}}
+  {{> "systems/animabf/templates/actor/parts/effects/parts/pain-modifiers.hbs"}}
 </div>
