--- a/src/scss/actor/parts/effects.scss
+++ b/src/scss/actor/parts/effects.scss
@@ -4,9 +4,11 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 1rem;
+
   .effects-list {
     .items-list {
       display: flex;
+
       .item {
         .item-name {
           .effect-image {
@@ -17,6 +19,14 @@
           }
         }
       }
+    }
+  }
+
+  .pain-modifiers {
+    .group-body {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-column-gap: 1rem;
     }
   }
 }
