replace visuals-effects for status

--- a/src/scss/actor/actor-sheet.scss
+++ b/src/scss/actor/actor-sheet.scss
@@ -7,4 +7,4 @@
 @import 'parts/domine.scss';
 @import 'parts/psychic.scss';
 @import 'parts/settings.scss';
-@import 'parts/effects.scss';
+@import 'parts/status.scss';
