--- a/src/templates/actor/parts/status/parts/pain-modifiers.hbs
+++ b/src/templates/actor/parts/status/parts/pain-modifiers.hbs
@@ -3,7 +3,7 @@
 }}
   {{>
   "systems/animabf/templates/common/ui/group-header.hbs"
-    title=(localize "anima.ui.effects.painModifiers.title")
+    title=(localize "anima.ui.status.painModifiers.title")
   }}
   {{#> "systems/animabf/templates/common/ui/group-body.hbs"
     class="pain-modifiers"
@@ -11,7 +11,7 @@
     {{>
     "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
       class="fatigue"
-      title=(localize "anima.ui.effects.painModifiers.fatigue.title")
+      title=(localize "anima.ui.status.painModifiers.fatigue.title")
       inputName="system.general.modifiers.pain.fatigue.value"
       inputValue=system.general.modifiers.pain.fatigue.value
     }}
@@ -19,7 +19,7 @@
     {{>
     "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
       class="physical"
-      title=(localize "anima.ui.effects.painModifiers.physical.title")
+      title=(localize "anima.ui.status.painModifiers.physical.title")
       inputName="system.general.modifiers.pain.physical.value"
       inputValue=system.general.modifiers.pain.physical.value
     }}
@@ -27,7 +27,7 @@
     {{>
     "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
       class="incapacitation"
-      title=(localize "anima.ui.effects.painModifiers.incapacitation.title")
+      title=(localize "anima.ui.status.painModifiers.incapacitation.title")
       inputName="system.general.modifiers.pain.incapacitation.value"
       inputValue=system.general.modifiers.pain.incapacitation.value
     }}
@@ -35,7 +35,7 @@
     {{>
     "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
       class="withstandPain"
-      title=(localize "anima.ui.effects.painModifiers.withstandPain.title")
+      title=(localize "anima.ui.status.painModifiers.withstandPain.title")
       inputName="system.general.modifiers.pain.withstandPain.value"
       inputValue=system.general.modifiers.pain.withstandPain.value
     }}
