--- a/src/templates/actor/parts/status/parts/effects-list.hbs
+++ b/src/templates/actor/parts/status/parts/effects-list.hbs
@@ -3,14 +3,14 @@
 }}
   {{>
   "systems/animabf/templates/common/ui/group-header.hbs"
-    title=(localize "anima.ui.effects.effectsList.title")
+    title=(localize "anima.ui.status.effectsList.title")
   }}
   {{#> "systems/animabf/templates/common/ui/group-body.hbs"
     class="effects-list"
   }}
   <table class="item-list effects-list">
         <tr>
-            <th>{{localize "anima.ui.effects.effectsList.name.title"}}</th>
+            <th>{{localize "anima.ui.status.effectsList.name.title"}}</th>
             <th>
                 <a class="effect-control" data-action="create">
                     <i class="fas fa-plus"></i>
@@ -24,13 +24,13 @@
             </td>
             <td class="effect-controls">
                 <a class="effect-control" data-action="toggle"
-                   title="{{#if effect.disabled}}{{localize "anima.ui.effects.effectsList.enable.title"}}{{else}}{{localize "anima.ui.effects.effectsList.disable.title"}}{{/if}}">
+                   title="{{#if effect.disabled}}{{localize "anima.ui.status.effectsList.enable.title"}}{{else}}{{localize "anima.ui.status.effectsList.disable.title"}}{{/if}}">
                     <i class="fas {{#if effect.disabled}}fa-check{{else}}fa-times{{/if}}"></i>
                 </a>
-                <a class="effect-control" data-action="edit" title="{{localize "anima.ui.effects.effectsList.edit.title"}}">
+                <a class="effect-control" data-action="edit" title="{{localize "anima.ui.status.effectsList.edit.title"}}">
                     <i class="fas fa-edit"></i>
                 </a>
-                <a class="effect-control" data-action="delete" title="{{localize "anima.ui.effects.effectsList.delete.title"}}">
+                <a class="effect-control" data-action="delete" title="{{localize "anima.ui.status.effectsList.delete.title"}}">
                     <i class="fas fa-trash"></i>
                 </a>
             </td>
