--- a/src/templates/dialog/combat/combat-defense/parts/psychic.hbs
+++ b/src/templates/dialog/combat/combat-defense/parts/psychic.hbs
@@ -15,48 +15,62 @@
 }}
 
 {{#if this.defender.psychic.supernaturalShield.newShield}}
-{{>
-"systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-  title=(localize 'macros.combat.dialog.psychicPotential.title')
-  disabled=this.defenseSent
-  inputName="defender.psychic.psychicPotential.special"
-  inputValue=this.defender.psychic.psychicPotential.special
-  hasSecondaryInput=true
-  disableSecondaryInput=true
-  secondaryInputName="defender.psychic.psychicPotential.final"
-  secondaryInputValue=this.defender.psychic.psychicPotential.final
-}}
+  {{>
+  "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+    title=(localize 'macros.combat.dialog.psychicPotential.title')
+    disabled=this.defenseSent
+    inputName="defender.psychic.psychicPotential.special"
+    inputValue=this.defender.psychic.psychicPotential.special
+    hasSecondaryInput=true
+    disableSecondaryInput=true
+    secondaryInputName="defender.psychic.psychicPotential.final"
+    secondaryInputValue=this.defender.psychic.psychicPotential.final
+  }}
 
-{{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
-  title=(localize 'macros.combat.dialog.psychicPower.title')
-  disabled=this.defenseSent
-  inputName='defender.psychic.powerUsed'
-}}
-  {{#each_when this.defender.actor.system.psychic.psychicPowers "system" "combatType" "value" "defense"}}
-    <option {{#if (is "eq" this._id ../this.defender.psychic.powerUsed)}}selected{{/if}} value='{{this._id}}'>{{this.name}}</option>
-  {{/each_when}}
-{{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+  {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+    title=(localize 'macros.combat.dialog.psychicPower.title')
+    disabled=this.defenseSent
+    inputName='defender.psychic.powerUsed'
+  }}
+    {{#each_when this.defender.actor.system.psychic.psychicPowers "system" "combatType" "value" "defense"}}
+      <option {{#if (is "eq" this._id ../this.defender.psychic.powerUsed)}}selected{{/if}} value='{{this._id}}'>{{this.name}}</option>
+    {{/each_when}}
+  {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 
 {{else}}
-{{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
-  title=(localize 'macros.combat.dialog.psychicShield.title')
-  disabled=this.defenseSent
-  inputName='defender.psychic.supernaturalShield.shieldUsed'
-}}
-  {{#each_when this.defender.actor.system.combat.supernaturalShields "system" "type" "" "psychic"}}
-    {{#if (is "eq" this.system.origin ../this.defender.actor.uuid)}}
-      <option {{#if (is "eq" this._id ../this.defender.psychic.supernaturalShield.shieldUsed)}}selected{{/if}} value='{{this._id}}'>{{this.name}}</option>
-    {{/if}}
-  {{/each_when}}
-{{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+  {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+    title=(localize 'macros.combat.dialog.psychicShield.title')
+    disabled=this.defenseSent
+    inputName='defender.psychic.supernaturalShield.shieldUsed'
+  }}
+    {{#each_when this.defender.actor.system.combat.supernaturalShields "system" "type" "" "psychic"}}
+      {{#if (is "eq" this.system.origin ../this.defender.actor.uuid)}}
+        <option {{#if (is "eq" this._id ../this.defender.psychic.supernaturalShield.shieldUsed)}}selected{{/if}} value='{{this._id}}'>{{this.name}}</option>
+      {{/if}}
+    {{/each_when}}
+  {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 
-{{>
-"systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-  title=(localize "macros.combat.dialog.shieldValue.title")
-  disabled=this.defenseSent
-  inputName="defender.psychic.supernaturalShield.shieldValue"
-  inputValue=this.defender.psychic.supernaturalShield.shieldValue
-}}
+  {{>
+  "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+    title=(localize "macros.combat.dialog.shieldValue.title")
+    disabled=this.defenseSent
+    inputName="defender.psychic.supernaturalShield.shieldValue"
+    inputValue=this.defender.psychic.supernaturalShield.shieldValue
+  }}
+
+  {{#if (and (is 'gt' this.defender.actor.system.psychic.psychicPoints.value 0) (is 'eq' this.defender.actor.system.psychic.psychicSettings.fatigueResistance false))}}
+  <div class='columns'>
+    <div>
+      {{>
+        "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+        title=(localize 'macros.combat.dialog.eliminateFatigue.title')
+        inputType="checkbox"
+        inputName="defender.psychic.eliminateFatigue"
+        inputValue=(is 'eq' this.defender.psychic.eliminateFatigue true)
+      }}
+    </div>
+  </div>
+  {{/if}}
 {{/if}}
 
 <div class='columns'>
