update - modifiers allActrions secondaryInput

--- a/src/templates/actor/parts/header/parts/modifiers.hbs
+++ b/src/templates/actor/parts/header/parts/modifiers.hbs
@@ -22,6 +22,10 @@
         title=(localize "anima.ui.general.modifiers.allActions.title")
         inputName="system.general.modifiers.allActions.base.value"
         inputValue=system.general.modifiers.allActions.base.value
+        hasSecondaryInput=true
+        disableSecondaryInput=true
+        secondaryInputName="system.general.modifiers.allActions.final.value"
+        secondaryInputValue=system.general.modifiers.allActions.final.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
