new-resistanceRoll socket

--- a/src/scss/animabf.scss
+++ b/src/scss/animabf.scss
@@ -13,6 +13,7 @@
 @import 'dialog/combat-request-dialog.scss';
 @import 'dialog/combat-attack-dialog';
 @import 'dialog/combat-defense-dialog';
+@import 'dialog/roll-request-dialog.scss';
 @import 'dialog/generic-dialog.scss';
 @import 'dialog/confirmation-prompt-dialog';
 @import 'dialog/new-supernatural-shield';
