--- a/src/templates/dialog/combat/combat-defense/parts/psychic.hbs
+++ b/src/templates/dialog/combat/combat-defense/parts/psychic.hbs
@@ -37,7 +37,34 @@
     {{/each_when}}
   {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 
-{{else}}
+  {{#if (and (is 'gt' this.defender.actor.system.psychic.psychicPoints.value 0) (is 'eq' this.defender.actor.system.psychic.psychicSettings.fatigueResistance false))}}
+  <div class='columns'>
+    <div>
+      {{>
+        "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+        title=(localize 'macros.combat.dialog.eliminateFatigue.title')
+        inputType="checkbox"
+        inputName="defender.psychic.eliminateFatigue"
+        inputValue=(is 'eq' this.defender.psychic.eliminateFatigue true)
+      }}
+    </div>
+  </div>
+  {{/if}}
+
+  <div class='columns'>
+    <div>
+      {{>
+        "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+        title=(localize 'macros.combat.dialog.mentalPatternImbalance.title')
+        inputType="checkbox"
+        inputName="defender.psychic.mentalPatternImbalance"
+        inputValue=(is 'eq' this.defender.psychic.mentalPatternImbalance true)
+      }}
+    </div>
+  </div>
+
+  {{else}}
+
   {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
     title=(localize 'macros.combat.dialog.psychicShield.title')
     disabled=this.defenseSent
@@ -57,20 +84,6 @@
     inputName="defender.psychic.supernaturalShield.shieldValue"
     inputValue=this.defender.psychic.supernaturalShield.shieldValue
   }}
-
-  {{#if (and (is 'gt' this.defender.actor.system.psychic.psychicPoints.value 0) (is 'eq' this.defender.actor.system.psychic.psychicSettings.fatigueResistance false))}}
-  <div class='columns'>
-    <div>
-      {{>
-        "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-        title=(localize 'macros.combat.dialog.eliminateFatigue.title')
-        inputType="checkbox"
-        inputName="defender.psychic.eliminateFatigue"
-        inputValue=(is 'eq' this.defender.psychic.eliminateFatigue true)
-      }}
-    </div>
-  </div>
-  {{/if}}
 {{/if}}
 
 <div class='columns'>
