update - SupernaturalShield  with mentalPatternImbalance

--- a/src/templates/dialog/new-supernatural-shield/parts/new-psychic-shield.hbs
+++ b/src/templates/dialog/new-supernatural-shield/parts/new-psychic-shield.hbs
@@ -31,4 +31,11 @@
         inputName='new.psychicShield.eliminateFatigue'
       }}
 
+      {{>
+        'systems/animabf/templates/common/ui/horizontal-titled-input.hbs'
+        title=(localize 'macros.combat.dialog.mentalPatternImbalance.title')
+        inputType='checkbox'
+        inputName='new.psychicShield.mentalPatternImbalance'
+      }}
+
     {{/if}}
