--- a/src/templates/dialog/combat/combat-defense/parts/psychic.hbs
+++ b/src/templates/dialog/combat/combat-defense/parts/psychic.hbs
@@ -51,6 +51,7 @@
   </div>
   {{/if}}
 
+  {{#unless (isArrayEmpty this.defender.actor.system.psychic.mentalPatterns)}}
   <div class='columns'>
     <div>
       {{>
@@ -62,6 +63,7 @@
       }}
     </div>
   </div>
+  {{/unless}}
 
   {{else}}
 
