Added missing quotation marks on secondaryInputName's value

--- a/src/templates/actor/parts/header/parts/modifiers.hbs
+++ b/src/templates/actor/parts/header/parts/modifiers.hbs
@@ -17,7 +17,7 @@
         inputValue=system.general.modifiers.physicalActions.special.value
         hasSecondaryInput=true
         disableSecondaryInput=true
-        secondaryInputName=system.general.modifiers.physicalActions.final.value
+        secondaryInputName="system.general.modifiers.physicalActions.final.value"
         secondaryInputValue=system.general.modifiers.physicalActions.final.value
       }}
       {{>
@@ -28,7 +28,7 @@
         inputValue=system.general.modifiers.allActions.special.value
         hasSecondaryInput=true
         disableSecondaryInput=true
-        secondaryInputName=system.general.modifiers.allActions.final.value
+        secondaryInputName="system.general.modifiers.allActions.final.value"
         secondaryInputValue=system.general.modifiers.allActions.final.value
       }}
       {{>
@@ -39,7 +39,7 @@
         inputValue=system.general.modifiers.naturalPenalty.special.value
         hasSecondaryInput=true
         disableSecondaryInput=true
-        secondaryInputName=system.general.modifiers.naturalPenalty.final.value
+        secondaryInputName="system.general.modifiers.naturalPenalty.final.value"
         secondaryInputValue=system.general.modifiers.naturalPenalty.final.value
       }}
       {{>
@@ -50,7 +50,7 @@
         inputValue=system.general.modifiers.perceptionPenalty.special.value
         hasSecondaryInput=true
         disableSecondaryInput=true
-        secondaryInputName=system.general.modifiers.perceptionPenalty.final.value
+        secondaryInputName="system.general.modifiers.perceptionPenalty.final.value"
         secondaryInputValue=system.general.modifiers.perceptionPenalty.final.value
       }}
     </div>
