--- a/src/templates/custom-hotbar/custom-hotbar.hbs
+++ b/src/templates/custom-hotbar/custom-hotbar.hbs
@@ -13,6 +13,10 @@
         <img src='/systems/animabf/assets/icons/game-icons.net/ffffff/lorc/sword-clash.svg' />
         <p class='shortcut'>ctrl + 2</p>
       </div>
+      <div title='{{localize 'customHotbar.mysticAct'}}' id='custom-hotbar-mystic-act' class='custom-macro'>
+        <img src='/icons/svg/aura.svg' />
+        <p class='shortcut'>ctrl + 3</p>
+      </div>
     </ol>
   {{else}}
     <ol class='macros'>
