update - macro-mystic-act

--- a/src/scss/actor/parts/mystic.scss
+++ b/src/scss/actor/parts/mystic.scss
@@ -25,6 +25,12 @@
     }
     // Grids
 
+    // ACT
+    div .act-vias .group-header{
+      padding-right: 2rem
+    }
+    // ACT
+
     // Magic Projection
     .magic-projection {
       .title {
