--- a/src/scss/animabf.scss
+++ b/src/scss/animabf.scss
@@ -17,3 +17,4 @@
 @import 'dialog/generic-dialog.scss';
 @import 'dialog/confirmation-prompt-dialog';
 @import 'dialog/new-supernatural-shield';
+@import 'dialog/mystic-act-dialog';
