--- a/src/templates/dialog/mystic-act.hbs
+++ b/src/templates/dialog/mystic-act.hbs
@@ -4,72 +4,137 @@
   }}
     {{>
     "systems/animabf/templates/common/ui/group-header.hbs"
-      title=(localize (concat 'macros.dialog.mystic-act.title'))
+      title=(localize (concat 'macros.mysticAct.dialog.title'))
     }}
     {{#> "systems/animabf/templates/common/ui/group-body.hbs"
       class="mystic-act"
     }}
-      <div class='columns'>
-        <div>
+
+      <nav class="abf-tabs sheet-tabs tabs" data-group="primary">
+        <a class="item" data-tab="zeon">{{localize "anima.ui.tabs.zeon"}}</a>
+        <a class="item" data-tab="preparedSpells">{{localize "anima.ui.tabs.preparedSpells"}}</a>
+      </nav>
+    {{>
+    "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+      title=(localize "macros.mysticAct.dialog.zeon.title")
+      disabled=true
+      inputName="zeon.value"
+      inputValue=this.zeon.value
+    }}
+      <section class="sheet-body">
+        <div class="tab zeon" data-group="primary" data-tab="zeon">
           {{>
-              "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-              title=(localize 'macros.combat.dialog.noRoll.title')
-              disabled=true
-              inputType="checkbox"
-              inputName="withoutRoll"
-              inputValue=(is 'eq' this.withoutRoll true)
+          "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+            title=(localize "macros.mysticAct.dialog.zeonAccumulated.title")
+            disabled=true
+            inputName="zeon.accumulated"
+            inputValue=this.zeon.accumulated
           }}
         </div>
-        <div>
-          {{#if this.ui.isGM}}
+
+        <div class="tab prepared-spells" data-group="primary" data-tab="preparedSpells">
+                   
+          {{#if (is 'eq' this.ui.noPreparingSpell false)}}
+              {{>
+              "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+              title=(localize 'macros.mysticAct.dialog.newSpell.title')
+              inputType="checkbox"
+              inputName="ui.newSpell"
+              inputValue=(is 'eq' this.ui.newSpell true)
+              }}
+          {{/if}}
+
+          {{#if this.ui.newSpell}}
+            {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+              title=(localize 'macros.combat.dialog.spell.title')
+              inputName='selectedSpell.id'
+            }}
+              {{#each this.actor.system.mystic.spells}}
+                <option {{#if (is "eq" this._id ../this.selectedSpell.id)}}selected{{/if}} value='{{this._id}}'>{{this.name}}</option>
+              {{/each}}
+            {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+
+            {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+              title=(localize 'macros.combat.dialog.spellGrade.title')
+              inputName='selectedSpell.spellGrade'
+            }}
+              <option {{#if (is "eq" this.selectedSpell.spellGrade 'base')}}selected{{/if}} value='base'>{{localize 'macros.combat.dialog.spellGrade.base.title'}}</option>
+              <option {{#if (is "eq" this.selectedSpell.spellGrade 'intermediate')}}selected{{/if}} value='intermediate'>{{localize 'macros.combat.dialog.spellGrade.intermediate.title'}}</option>
+              <option {{#if (is "eq" this.selectedSpell.spellGrade 'advanced')}}selected{{/if}} value='advanced'>{{localize 'macros.combat.dialog.spellGrade.advanced.title'}}</option>
+              <option {{#if (is "eq" this.selectedSpell.spellGrade 'arcane')}}selected{{/if}} value='arcane'>{{localize 'macros.combat.dialog.spellGrade.arcane.title'}}</option>
+            {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+
             {{>
             "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-              title=(localize 'macros.combat.dialog.showRoll.title')
+              title=(localize "macros.mysticAct.dialog.zeonCost.title")
               disabled=true
-              inputType="checkbox"
-              inputName="showRoll"
-              inputValue=(is 'eq' this.showRoll true)
+              inputName="selectedSpell.zeonCost"
+              inputValue=this.selectedSpell.zeonCost
+            }}
+            {{else}}
+              {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+                title=(localize 'macros.combat.dialog.spell.title')
+                inputName='preparedSpell.id'
+              }}
+                {{#each_when this.actor.system.mystic.preparedSpells "system" "prepared" "value" false}}
+                  <option {{#if (is "eq" this._id ../this.preparedSpell.id)}}selected{{/if}} value='{{this._id}}'>{{this.name}} - {{this.system.grade.value}}</option>
+                {{/each_when}}
+              {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+
+            {{>
+            "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+              title=(localize "macros.mysticAct.dialog.zeonAccumulated.title")
+              disabled=true
+              inputName="preparedSpell.zeonAcc.value"
+              inputValue=this.preparedSpell.zeonAcc.value
+              hasSecondaryInput=true
+              disableSecondaryInput=true
+              secondaryInputName="preparedSpell.zeonAcc.max"
+              secondaryInputValue=this.preparedSpell.zeonAcc.max
             }}
           {{/if}}
-        </div>
-      </div>
 
+        </div>
+      </section>
+
+  {{#unless (is 'gt' this.act.spareAct 0)}}
     {{>
     "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
       title=(localize 'macros.combat.dialog.modifier.title')
-      disabled=false
-      inputName="roll.modifier"
-      inputValue=this.roll.modifier
-    }}
-
-    {{>
-    "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-      title=(localize "macros.combat.dialog.rollValue.title")
-      disabled=true
-      inputName="roll.value"
-      inputValue=this.roll.value
+      inputName="act.modifier"
+      inputValue=this.act.modifier
     }}
 
     {{#if this.ui.hasFatiguePoints}}
       {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
         title=(localize 'macros.combat.dialog.fatigue.title')
-        disabled=this.rollSent
-        inputName="roll.fatigueUsed"
-        inputValue=this.roll.fatigueUsed
+        inputName="act.fatigueUsed"
+        inputValue=this.act.fatigueUsed
       }}
-        <option {{#if (is "eq" 0 this.roll.fatigueUsed)}}selected{{/if}} value='0'>0</option>
+        <option {{#if (is "eq" 0 this.act.fatigueUsed)}}selected{{/if}} value='0'>0</option>
 
       {{#iterateNumber this.actor.system.characteristics.secondaries.fatigue.value}}
-        <option {{#if (is "eq" (math this "+" 1) ../this.roll.fatigueUsed)}}selected{{/if}} value='{{math this "+" 1}}'>{{math this "+" 1}}</option>
+        <option {{#if (is "eq" (math this "+" 1) ../this.act.fatigueUsed)}}selected{{/if}} value='{{math this "+" 1}}'>{{math this "+" 1}}</option>
       {{/iterateNumber}}
       {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
       {{else}}
       <p class='label no-fatigue'>{{localize 'macros.combat.dialog.notEnoughFatigue.title'}}</p>
     {{/if}}
-
-    <button class='abf-button send-roll' data-type='roll'>
-      {{localize 'macros.combat.dialog.rollButton.title'}}
-    </button>
+    <div class='act-buttons'>
+      <button class='abf-button full-act' data-type='act'>
+        {{localize 'macros.mysticAct.dialog.button.fullAct.title'}} + {{this.act.final}}
+      </button>
+      <button class='abf-button partial-act' data-type='act'>
+        {{localize 'macros.mysticAct.dialog.button.partialAct.title'}} + {{this.act.partial}}
+      </button>
+    </div>
+    {{else}}
+    <div class='act-buttons'>
+      <button class='abf-button full-act' data-type='act'>
+        {{localize 'macros.mysticAct.dialog.button.spareAct.title'}} + {{this.act.final}}
+      </button>
+    </div>
+  {{/unless}}
 
     {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
   {{/"systems/animabf/templates/common/ui/group.hbs"}}
